Refactor GraphQL data fetchers to improve error handling and streamline code; remove unused test files